{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 42,
  "lineage": "260286f6-f432-3689-b29a-9ddcf908cbfc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b4cef156be2146d",
            "arn": "arn:aws:ec2:us-east-1:437147519305:elastic-ip/eipalloc-01b4cef156be2146d",
            "association_id": "eipassoc-091d7dff785ec88f3",
            "domain": "vpc",
            "id": "eipalloc-01b4cef156be2146d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00a19755472f4a697",
            "private_dns": "ip-10-0-13-200.ec2.internal",
            "private_ip": "10.0.13.200",
            "public_dns": "ec2-34-192-19-115.compute-1.amazonaws.com",
            "public_ip": "34.192.19.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "example-network-nat-eip-1",
              "Project": "demo"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "example-network-nat-eip-1",
              "Project": "demo"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0919b832a5740bf19",
            "arn": "arn:aws:ec2:us-east-1:437147519305:elastic-ip/eipalloc-0919b832a5740bf19",
            "association_id": "eipassoc-0792e7580bbd0f472",
            "domain": "vpc",
            "id": "eipalloc-0919b832a5740bf19",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02807d3211c441bbe",
            "private_dns": "ip-10-0-31-0.ec2.internal",
            "private_ip": "10.0.31.0",
            "public_dns": "ec2-100-30-247-157.compute-1.amazonaws.com",
            "public_ip": "100.30.247.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "example-network-nat-eip-2",
              "Project": "demo"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "example-network-nat-eip-2",
              "Project": "demo"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:internet-gateway/igw-01c7e310d3dfb10a5",
            "id": "igw-01c7e310d3dfb10a5",
            "owner_id": "437147519305",
            "tags": {
              "Env": "dev",
              "Name": "example-network-igw",
              "Project": "demo"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "example-network-igw",
              "Project": "demo"
            },
            "vpc_id": "vpc-0aabedb5c88362d87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b4cef156be2146d",
            "association_id": "eipassoc-091d7dff785ec88f3",
            "connectivity_type": "public",
            "id": "nat-0e8d5eb3342e04e54",
            "network_interface_id": "eni-00a19755472f4a697",
            "private_ip": "10.0.13.200",
            "public_ip": "34.192.19.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f80829a606ef2274",
            "tags": {
              "Env": "dev",
              "Name": "example-network-nat-1",
              "Project": "demo"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "example-network-nat-1",
              "Project": "demo"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0919b832a5740bf19",
            "association_id": "eipassoc-0792e7580bbd0f472",
            "connectivity_type": "public",
            "id": "nat-0ad4ff8d59d527047",
            "network_interface_id": "eni-02807d3211c441bbe",
            "private_ip": "10.0.31.0",
            "public_ip": "100.30.247.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04449206d1e68df7a",
            "tags": {
              "Env": "dev",
              "Name": "example-network-nat-2",
              "Project": "demo"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "example-network-nat-2",
              "Project": "demo"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01e8bf4b0453a21e41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e8d5eb3342e04e54",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01e8bf4b0453a21e4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d95a7864fe30f8e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ad4ff8d59d527047",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d95a7864fe30f8e8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01c7e310d3dfb10a5",
            "id": "r-rtb-0f52d3f0bb3de97231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f52d3f0bb3de9723",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:route-table/rtb-01e8bf4b0453a21e4",
            "id": "rtb-01e8bf4b0453a21e4",
            "owner_id": "437147519305",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e8d5eb3342e04e54",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "example-network-private-1-rt",
              "Project": "demo"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "example-network-private-1-rt",
              "Project": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aabedb5c88362d87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:route-table/rtb-0d95a7864fe30f8e8",
            "id": "rtb-0d95a7864fe30f8e8",
            "owner_id": "437147519305",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ad4ff8d59d527047",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "example-network-private-2-rt",
              "Project": "demo"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "example-network-private-2-rt",
              "Project": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aabedb5c88362d87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:route-table/rtb-0f52d3f0bb3de9723",
            "id": "rtb-0f52d3f0bb3de9723",
            "owner_id": "437147519305",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c7e310d3dfb10a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "example-network-public-rt",
              "Project": "demo"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "example-network-public-rt",
              "Project": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aabedb5c88362d87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd175ba89b9d064a",
            "route_table_id": "rtb-01e8bf4b0453a21e4",
            "subnet_id": "subnet-00be5982cc11107e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033a271c90e67b4bc",
            "route_table_id": "rtb-0d95a7864fe30f8e8",
            "subnet_id": "subnet-0d49587e99da9abfb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae3f18206de28360",
            "route_table_id": "rtb-0f52d3f0bb3de9723",
            "subnet_id": "subnet-0f80829a606ef2274"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071725f1e271e104e",
            "route_table_id": "rtb-0f52d3f0bb3de9723",
            "subnet_id": "subnet-04449206d1e68df7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:subnet/subnet-00be5982cc11107e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00be5982cc11107e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437147519305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "example-network-private-1",
              "Project": "demo",
              "Tier": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "example-network-private-1",
              "Project": "demo",
              "Tier": "private"
            },
            "vpc_id": "vpc-0aabedb5c88362d87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:subnet/subnet-0d49587e99da9abfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d49587e99da9abfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437147519305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "example-network-private-2",
              "Project": "demo",
              "Tier": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "example-network-private-2",
              "Project": "demo",
              "Tier": "private"
            },
            "vpc_id": "vpc-0aabedb5c88362d87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:subnet/subnet-0f80829a606ef2274",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f80829a606ef2274",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "437147519305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "example-network-public-1",
              "Project": "demo",
              "Tier": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "example-network-public-1",
              "Project": "demo",
              "Tier": "public"
            },
            "vpc_id": "vpc-0aabedb5c88362d87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:subnet/subnet-04449206d1e68df7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04449206d1e68df7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "437147519305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "example-network-public-2",
              "Project": "demo",
              "Tier": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "example-network-public-2",
              "Project": "demo",
              "Tier": "public"
            },
            "vpc_id": "vpc-0aabedb5c88362d87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437147519305:vpc/vpc-0aabedb5c88362d87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013a70500f9a7c44b",
            "default_route_table_id": "rtb-0c70eda1f3b218827",
            "default_security_group_id": "sg-070dc21d902a86d57",
            "dhcp_options_id": "dopt-0541a3d073f08c16e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aabedb5c88362d87",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c70eda1f3b218827",
            "owner_id": "437147519305",
            "tags": {
              "Env": "dev",
              "Name": "example-network-vpc",
              "Project": "demo"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "example-network-vpc",
              "Project": "demo"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}